# autochehol-bot

./: README.md  pyproject.toml  render.yaml  requirements.txt
docs/: telegram-bot-spec.md
scripts/: serve.py
src/: service.py
src/telegram_bot/: app.py  autochehol.py
