[project]
name = "khl-agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.121.1",
  "uvicorn[standard]>=0.38.0",
  "pydantic>=2.12.4",
  "requests>=2.31.0",
  "pandas>=2.3.3",
  "numpy>=2.3.4",
  "python-telegram-bot==21.6",
  "sqlmodel>=0.0.27",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.21.0",
  "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
python-telegram-bot = { version = "==21.6", extras = ["job-queue"] }
